[tool.poetry]
name = "admin-service"
version = "0.1.0"
description = ""
authors = ["alejovillores <avillores@fi.uba.ar>"]
readme = "README.md"
packages = [{include = "admin_service"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
